--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,7 +25,8 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "wink-sentiment": "^5.0.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "prisma": "^5.19.1",
