--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc -v"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "concurrently": "^9.0.1",
     "eslint": "^9.13.0",
     "typescript": "^5.6.3"
