--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,5 +6,5 @@
       "@types/*": ["../../packages/types/src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "prisma/seed.ts", "src/types"]
 }
