--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "concurrently": "^9.0.1",
     "eslint": "^9.13.0",
     "typescript": "^5.6.3"
-  }
+  },
+  "packageManager": "pnpm@9.12.2"
 }
