--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,7 +12,8 @@
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
     "prisma:seed": "tsx prisma/seed.ts",
-    "ingest": "tsx src/scripts/ingest.ts"
+    "ingest": "tsx scripts/ingest.ts"
+
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
